# kawakaze

./: CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.example  README.md  TODO_VNET.md
Dockerfiles/: README.md  nginx.dockerfile  postgresql.dockerfile  redis.dockerfile  simple-test.dockerfile
backend/: Cargo.toml
backend/examples/: create_jail.rs  socket_client.rs
backend/src/: api.rs  bootstrap.rs  config.rs  container.rs  handler.rs  image.rs  image_builder.rs  jail.rs  lib.rs  networking.rs  server.rs  store.rs  zfs.rs
backend/tests/: api_integration.rs  networking_tests.rs  port_forwarding_tests.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: IMPLEMENTATION_SUMMARY.md
scripts/: README.md  setup-pf.sh
src/: main.rs
