[package]
name = "kawakaze-backend"
version.workspace = true
edition.workspace = true

[dependencies]
libc = "0.2"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "net", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
