[package]
name = "kawakaze-backend"
version.workspace = true
edition.workspace = true

[dependencies]
libc = "0.2"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "net", "io-util", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["stream"] }
async-compression = { version = "0.4", features = ["xz", "tokio"], default-features = false }
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
thiserror = "2.0"
tar = "0.4"
xz2 = "0.1"
toml = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
shell-words = "1.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
tempfile = "3"
